@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-14T16:06:28Z",
-  "count_outdated" : 217,
-  "uniques_outdated" : 153,
+  "timestamp" : "2024-01-15T16:07:11Z",
+  "count_outdated" : 219,
+  "uniques_outdated" : 154,
   "count" : 226,
   "uniques" : 161,
   "clones" : [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
