@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 8,
+  "count": 7,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
