@@ -1,3 +1,12 @@
+2024-01-15T16:07:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7531407105 # 26
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
+* notice: last 14d: unq all: 7 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 153 217 / 161 226
+* notice: next accum: outdated-unq outdated-all / unq all: 154 219 / 161 226
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-01] / []
+
 2024-01-14T16:06:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7520283233 # 23
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
